# AlchemyCV

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  alchemy_cv.py  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
src/alchemycv/: __init__.py  app.py  constants.py  utils.py
src/alchemycv/pipeline/: __init__.py  channels.py  contours.py  edges.py  engine.py  enhancement.py  frequency.py  masking.py  morphology.py  preprocessing.py
src/alchemycv/state/: __init__.py  manager.py  settings.py
src/alchemycv/ui/: __init__.py  canvas.py  control_panel.py  widgets.py
tests/: conftest.py  test_channels.py  test_contours.py  test_edges.py  test_enhancement.py  test_frequency.py  test_masking.py  test_morphology.py  test_pipeline_integration.py  test_preprocessing.py  test_state.py  test_utils.py
