[project]
name = "AlchemyCV"
version = "1.0.0"
description = "An advanced, all-in-one image processing and computer vision tool with a comprehensive GUI built in Python."
authors = [
    { name = "Prashant Rawat", email = "prashantrawatmailbox@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/kouya-marino/AlchemyCV"
"Bug Tracker" = "https://github.com/kouya-marino/AlchemyCV/issues"